# AgWebfull

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: ci.yml
src/: app.d.ts  app.html
src-tauri/: Assets.car  Cargo.toml  Info.plist  deny.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: agency-categories.json  tools.json
src-tauri/icons/: icon.icns
src-tauri/resources/corpus-baseline/scripts/: convert.sh
src-tauri/src/: error.rs  lib.rs  main.rs  registry.rs  state.rs  types.rs
src-tauri/src/commands/: github.rs  mod.rs  settings.rs  updater.rs
src-tauri/src/corpus/: mod.rs  parse.rs
src-tauri/src/github/: actions.rs  auth.rs  mod.rs  stats.rs  url.rs
src-tauri/src/install/: mod.rs
src-tauri/src/render/: mod.rs
src-tauri/src/util/: fs.rs  mod.rs  net.rs
src-tauri/tests/: integration_brew.rs
src-tauri/tests/fixtures/: brew_info_firefox.json  brew_info_wget.json  brew_list_cask.json  brew_list_formula.json  brew_outdated.json  brew_search_firefox.txt  brew_search_wget.txt  brew_search_with_sections.txt  sample_brewfile.txt  trending_30d.json
src/lib/: api.ts  platform.ts  types.ts
src/lib/components/: AgencyDashboard.svelte  AgentsWorkspace.svelte  Projects.svelte  Settings.svelte  Sidebar.svelte  Teams.svelte  Toast.svelte  ToolsView.svelte
src/lib/data/: categories.json  tools.json
src/lib/stores/: activity.svelte.ts  catalog.svelte.ts  corpus.svelte.ts  github.svelte.ts  i18n.svelte.ts  install.svelte.ts  projects.svelte.ts  runbooks.svelte.ts  settings.svelte.ts  teams.svelte.ts  toast.svelte.ts  ui.svelte.ts  updater.svelte.ts
src/lib/styles/: reset.css  tokens.css  typography.css
src/routes/: +layout.svelte  +layout.ts  +page.svelte
